<resources>
    <string name="app_name">Mini Twitter</string>
    <string name="avatar">Avatar</string>
    <string name="baron">Name</string>
    <string name="iimbaron">\@screen_name</string>
    <string name="text">text</string>
    <string name="count">9999</string>
    <string name="retweet">Retweet</string>
    <string name="comment">Comment</string>
    <string name="image">Image</string>
    <string name="des">Description</string>
    <string name="location">Location</string>
    <string name="link">URL</string>
    <string name="empty">empty</string>
    <string name="time">• time</string>
    <string name="number99">99</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="joined">Joined</string>
    <string name="profile_transition">profile transition</string>
    <string name="user_profile_transition">user profile transition</string>
    <string name="samplename">Baron</string>
    <string name="screennamesample">\@iimbaron</string>
    <string name="hint">What\'s happening?</string>
</resources>
