<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="455dp">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/img_avatar_compose"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/avatar"
            app:riv_corner_radius="30dip"
            app:riv_oval="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/avatar" />

        <TextView
            android:id="@+id/tv_name_compose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/samplename"
            android:textColor="#000000"
            android:textSize="@dimen/textSize16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/img_avatar_compose"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_screen_name_compose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="0dp"
            android:text="@string/screennamesample"
            android:textSize="@dimen/textSize16sp"
            app:layout_constraintStart_toEndOf="@+id/img_avatar_compose"
            app:layout_constraintTop_toBottomOf="@+id/tv_name_compose" />


        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/btnSend"
            android:layout_width="96dp"
            android:layout_height="36dp"
            android:layout_marginStart="200dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="24dp"
            android:src="@drawable/btn_tweet"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:riv_corner_radius="20dip" />


        <EditText
            android:id="@+id/edtCompose"
            android:layout_width="match_parent"
            android:layout_height="367dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:inputType="textMultiLine"
            android:textAlignment="viewStart"
            app:counterEnabled="true"
            app:counterMaxLength="140"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_avatar_compose"
            android:hint="@string/hint" />

        <TextView
            android:id="@+id/tv_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="140"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/edtCompose"
            app:layout_constraintTop_toTopOf="@+id/edtCompose" />


        <ProgressBar
            android:id="@+id/loader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginStart="168dp"
            android:layout_marginTop="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/white"
        app:itemIconTint="@drawable/bottom_navigation_colors"
        app:itemTextColor="@drawable/bottom_navigation_colors"
        app:menu="@menu/bottom_navigation_item" />



</FrameLayout>